# bcm-server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_release.sh
metrics_sdk/: CMakeLists.txt  README.md
metrics_sdk/include/: concurrent_queue.h  metrcis_common.h  metrics_client.h  metrics_config.h  metrics_log.h
metrics_sdk/src/: metrics_client.cpp  metrics_define.h  metrics_file_output.cpp  metrics_file_output.h  metrics_log_utils.h  metrics_statistic.cpp  metrics_statistic.h  metrics_utils.h  report_metrics.h  throttle_control.cpp  throttle_control.h
metrics_sdk/tests/: CMakeLists.txt  concurrent_queue_test.cpp  counter_metrics_test.cpp  direct_output_metrics_test.cpp  metrics_client_test.cpp  metrics_file_output_test.cpp  metrics_test_common.h  mix_metrics_test.cpp  report_metrics_test.cpp  test_common.h  throttle_control_test.cpp
src/: .clang-format  CMakeLists.txt
src/auth/: authenticator.cpp  authenticator.h  authorization_header.cpp  authorization_header.h  turntoken_generator.cpp  turntoken_generator.h
src/bloom/: bloom_filters.cpp  bloom_filters.h  hash_algo.cpp  hash_algo.h
src/common/: api.h  factory.cpp  factory.h  observer.h
src/config/: apns_config.h  bcm_config.h  bcm_metrics_config.h  bcm_options.cpp  bcm_options.h  cache_config.h  challenge_config.h  dao_config.h  dispatcher_config.h  encrypt_sender.h  fcm_config.h  group_config.h  group_store_format.h  lbs_config.h  limiters_config.h  log_config.h  multi_device_config.h  noise_config.h  offline_server_config.h  redis_config.h  s3_config.h  service_config.h  size_check_config.h  sysmsg_config.h  throttling_control_config.h  turn_config.h  umeng_config.h
src/controllers/: account_controller.cpp  account_controller.h  account_entities.h  attachment_controller.cpp  attachment_controller.h  attachment_entities.h  contact_controller.cpp  contact_controller.h  contact_entities.h  device_controller.cpp  device_controller.h  device_entities.h  device_keepalive_controller.cpp  device_keepalive_controller.h  echo_controller.cpp  echo_controller.h  group_common_entities.h  group_manager_controller.cpp  group_manager_controller.h  group_manager_controller_V3.cpp  group_manager_entities.cpp  group_manager_entities.h  group_msg_controller.cpp  group_msg_controller.h  group_msg_entities.h  keep_alive_controller.cpp  keep_alive_controller.h  keys_controller.cpp  keys_controller.h  keys_entities.h  message_controller.cpp  message_controller.h  message_entities.h  opaque_data_controller.cpp  opaque_data_controller.h  profile_controller.cpp  profile_controller.h  profile_entities.h  system_controller.cpp  system_controller.h  (+1 more)
src/crypto/: any_base.cpp  any_base.h  base64.cpp  base64.h  evp_cipher.cpp  evp_cipher.h  fnv.cpp  fnv.h  gzip.cpp  gzip.h  hex_encoder.cpp  hex_encoder.h  hmac.cpp  hmac.h  murmurhash3.cpp  murmurhash3.h  random.h  sha1.cpp  sha1.h  url_encoder.cpp  url_encoder.h
src/dao/: accounts.h  client.cpp  client.h  contacts.h  dao_impl_creator.h  group_keys.h  group_msgs.h  group_users.h  groups.h  limiter_configurations.h  limiters.h  onetime_keys.h  opaque_data.h  pending_group_users.h  qr_code_group_users.h  sign_up_challenges.h  stored_messages.h  sys_msgs.h  utilities.h
src/dispatcher/: dispatch_address.cpp  dispatch_address.h  dispatch_channel.cpp  dispatch_channel.h  dispatch_manager.cpp  dispatch_manager.h  idispatcher.h  offline_dispatcher.cpp  offline_dispatcher.h
src/features/: base_features.cpp  base_features.h  bcm_features.cpp  bcm_features.h
src/fiber/: asio_round_robin.cpp  asio_round_robin.h  asio_yield.cpp  asio_yield.h  fiber_pool.cpp  fiber_pool.h  fiber_timer.cpp  fiber_timer.h
src/filters/: magic_status_code_filter.cpp  magic_status_code_filter.h
src/group/: group_event.h  group_event_sub.cpp  group_event_sub.h  group_msg_service.cpp  group_msg_service.h  group_msg_sub.cpp  group_msg_sub.h  im_server_mgr.cpp  im_server_mgr.h  io_ctx_executor.cpp  io_ctx_executor.h  io_ctx_pool.cpp  io_ctx_pool.h  member_mgr_base.cpp  member_mgr_base.h  message_type.h  online_msg_handler.cpp  online_msg_handler.h  online_msg_member_mgr.cpp  online_msg_member_mgr.h
src/http/: custom_http_status.cpp  custom_http_status.h  http_client.h  http_context.h  http_route.cpp  http_route.h  http_router.cpp  http_router.h  http_service.cpp  http_service.h  http_session.cpp  http_session.h  http_statics.cpp  http_statics.h  http_url.cpp  http_url.h  http_validator.h
src/limiters/: api_checker.cpp  api_checker.h  api_matcher.cpp  api_matcher.h  api_qps_limiter.cpp  api_qps_limiter.h  checker.h  configuration_manager.cpp  configuration_manager.h  dependency_limiter.cpp  dependency_limiter.h  distributed_limiter.cpp  distributed_limiter.h  limiter.h  limiter_config_update.cpp  limiter_config_update.h  limiter_executor.cpp  limiter_executor.h  limiter_globals.cpp  limiter_globals.h  limiter_manager.cpp  limiter_manager.h  uid_checker.cpp  uid_checker.h  user_qps_limiter.cpp  user_qps_limiter.h
src/metrics/: onlineuser_metrics.cpp  onlineuser_metrics.h
src/push/: apns_client.cpp  apns_client.h  apns_notification.cpp  apns_notification.h  apns_qos_mgr.cpp  apns_qos_mgr.h  apns_service.cpp  apns_service.h  fcm_client.cpp  fcm_client.h  fcm_notification.cpp  fcm_notification.h  push_notification.cpp  push_notification.h  push_service.cpp  push_service.h  umeng_client.cpp  umeng_client.h  umeng_notification.cpp  umeng_notification.h
src/redis/: async_conn.cpp  async_conn.h  hiredis_client.cpp  hiredis_client.h  iasync_redis_event.h  libevent_task.h  online_redis_manager.cpp  online_redis_manager.h  redis_manage_timer.cpp  redis_manage_timer.h  redis_manager.cpp  redis_manager.h  reply.cpp  reply.h
src/registers/: imservice_register.cpp  imservice_register.h  lbs_register.cpp  lbs_register.h  offline_register.cpp  offline_register.h
src/utils/: log.cpp  (+19 more)
tests/: CMakeLists.txt  router_test.cpp  test_common.h
tools/: CMakeLists.txt  account_tool.cpp  bloom_filters_tool.cpp  device_tool.cpp  signal_openssl_provider.h  signup_tool.cpp  signup_tool.h  signupmodule.cpp  simple_client.cpp
(+120 files in other folders)
